fixed spacing issue and alignment in tranformaation upload page

--- a/src/components/Transformation/ValidateQuery.css
+++ b/src/components/Transformation/ValidateQuery.css
@@ -2,6 +2,8 @@
   display: flex;
   align-items: stretch;
   height: 50vh; /* Set container to full viewport height */
+  padding: 0;
+ 
 }
 
 .full-height {
@@ -10,8 +12,8 @@
 }
 
 .vertical-box {
-  width: 100%;
-  height: 340px; /* Set your desired fixed height */
+  width: 65%;
+  height: 410px; /* Set your desired fixed height */
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -29,8 +31,12 @@
   align-items: center;
   border: 1px solid #ccc;
   margin-bottom: 2px;
-  height: 44%; /* Set height of horizontal boxes to 50% */
+  height: 60%; /* Set height of horizontal boxes to 50% */
   width: 90vh;
+}
+
+.horizontalBoxSIze {
+height: 29.5% ;
 }
 
 .horizontal-box textarea {
@@ -45,6 +51,7 @@
 .file-uploader-container.dragging {
   background-color: rgba(0, 0, 0, 0.1);
   border: 2px dashed #ccc;
+  
 }
 
 .file-input-link {
@@ -98,6 +105,7 @@
   justify-content: space-between;
   align-items: center;
   width: 90vh;
+  
 }
 
 .run-link {
@@ -110,4 +118,8 @@
 .run-link:hover {
   text-decoration: underline;
   color: #ccc;
+}
+
+.EnterQueryBox {
+  padding: 0px !important;
 }
